新增样式表内置背景渐变颜色

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -10,6 +10,9 @@ page {
 	--color-yellow: #FFEA30;
 	--color-blue: #18BAFF;
 	--color-lg-green: linear-gradient(180deg, rgba(0, 174, 213, 0.46) 0%, #39C859 100%);
+	--color-lg-red: linear-gradient(180deg, rgba(182, 30, 220, 0.76) 0%, #FF5252 100%);
+	--color-lg-yellow: linear-gradient(180deg, rgba(255, 122, 0, 0.6) 0%, #EEDD43 100%);
+	--color-lg-blue: linear-gradient(180deg, rgba(67, 36, 255, 0.64) 0%, #46AFDC 100%);
 	// 阴影
 	--shadow-black: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.36));
 	--shadow-white: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.36));
