更新样式表内置红色色值

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -6,7 +6,7 @@ page {
 	--color-light-gray: #D9D9D9;
 	--color-transparent: #FFFFFF00;
 	--color-green: #21FF53;
-	--color-red: #FF424E;
+	--color-red: #FF616A;
 	--color-yellow: #FFEA30;
 	--color-blue: #18BAFF;
 	--color-lg-green: linear-gradient(180deg, rgba(0, 174, 213, 0.46) 0%, #39C859 100%);
