新增列表项相关颜色变量

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -4,11 +4,15 @@ page {
 	--color-white: #FFFFFF;
 	--color-dark-gray: #686868;
 	--color-light-gray: #D9D9D9;
-	--color-transparent: #FFFFFF00;
 	--color-green: #21FF53;
 	--color-red: #FF616A;
 	--color-yellow: #FFEA30;
 	--color-blue: #18BAFF;
+	--color-transparent: #FFFFFF00;
+	--color-trans-black: #3D3D3D88;
+	--color-trans-black-deep: #3D3D3Db9;
+	--color-trans-green: #21FF5388;
+	--color-trans-green-deep: #12bd3a88;
 	--color-lg-green: linear-gradient(180deg, rgba(0, 174, 213, 0.46) 0%, #39C859 100%);
 	--color-lg-red: linear-gradient(180deg, rgba(182, 30, 220, 0.76) 0%, #FF5252 100%);
 	--color-lg-yellow: linear-gradient(180deg, rgba(255, 122, 0, 0.6) 0%, #EEDD43 100%);
