规范化半透明颜色的命名

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -8,10 +8,16 @@ page {
 	--color-red: #FF616A;
 	--color-yellow: #FFEA30;
 	--color-blue: #18BAFF;
-	--color-trans-black: #3D3D3D88;
-	--color-trans-black-deep: #3D3D3Db9;
-	--color-trans-green: #21FF5388;
-	--color-trans-green-deep: #12bd3a88;
+	--color-ts-black: #3D3D3D88;
+	--color-ts-black-deep: #3D3D3Db9;
+	--color-ts-green: #21FF5388;
+	--color-ts-green-deep: #12bd3a88;
+	--color-ts-red: #f62e3888;
+	--color-ts-red-deep: #c51d2588;
+	--color-ts-yellow: #FFEA3088;
+	--color-ts-yellow-deep: #b9a91888;
+	--color-ts-blue: #18BAFF88;
+	--color-ts-blue-deep: #037aad88;
 	--color-lg-green: linear-gradient(180deg, rgba(0, 174, 213, 0.46) 0%, #39C859 100%);
 	--color-lg-red: linear-gradient(180deg, rgba(182, 30, 220, 0.76) 0%, #FF5252 100%);
 	--color-lg-yellow: linear-gradient(180deg, rgba(255, 122, 0, 0.6) 0%, #EEDD43 100%);
