新增半透明模式的黑灰色定义

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -10,6 +10,8 @@ page {
 	--color-blue: #18BAFF;
 	--color-ts-black: #3D3D3D88;
 	--color-ts-black-deep: #3D3D3Db9;
+	--color-ts-dark-gray: #68686888;
+	--color-ts-dark-gray-deep: #52525288;
 	--color-ts-green: #21FF5388;
 	--color-ts-green-deep: #12bd3a88;
 	--color-ts-red: #f62e3888;
